# Todoapp-claude

./: .coverage  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  test_full_stack.md
.claude/agents/: spec-validator.md
backend/: .env.example  README.md  pyproject.toml  test_api.py  test_endpoints.py
backend/examples/: simple_usage.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  crud_subagent.py
backend/src/api/: dependencies.py
backend/src/api/v1/: router.py  tasks.py
backend/src/auth/: __init__.py  middleware.py
backend/src/config/: __init__.py  settings.py
backend/src/database/: __init__.py  connection.py  init_db.py
backend/src/exceptions/: __init__.py  errors.py
backend/src/models/: __init__.py  task.py
backend/src/services/: __init__.py  task_service.py
backend/src/tools/: __init__.py  task_tools.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_crud_subagent.py
backend/tests/unit/: test_crud_tools.py  test_task_model.py
backend/todo_crud_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: .gitignore  middleware.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: AddTaskForm.tsx  TaskItem.tsx
frontend/lib/: api.ts  auth.ts
phase1-console/: README.md  requirements.txt  task.py  test_todo.py  todo.py
specs/: phase1-console-app.md  phase2-fullstack-web.md
specs/agents/: crud-subagent.md
specs/api/: mcp-tools.md
specs/database/: schema.md
